--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,37 @@
-name: CI - Build and Publish to GitHub Packages
+# name: CI - Build and Publish to GitHub Packages
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+
+#       - name: Set up Java 21
+#         uses: actions/setup-java@v4
+#         with:
+#           distribution: "temurin"
+#           java-version: "21"
+
+#       - name: Build and test with Maven
+#         run: mvn clean verify
+
+#       - name: Publish to GitHub Packages
+#         run: mvn deploy
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+name: CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   build:
@@ -13,16 +41,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Java 21
+      - name: Set up Java
         uses: actions/setup-java@v4
         with:
-          distribution: "temurin"
           java-version: "21"
+          distribution: "temurin"
+          server-id: github # this must match <id> in pom.xml
+          settings-path: ${{ github.workspace }} # creates a settings.xml
 
-      - name: Build and test with Maven
-        run: mvn clean verify
-
-      - name: Publish to GitHub Packages
-        run: mvn deploy
+      - name: Build and deploy with Maven
+        run: mvn deploy -DskipTests
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
