--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,13 +34,12 @@ on:
     branches:
       - main # or your release branch
 
-permissions:
-  contents: read
-  packages: write
-
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - name: Checkout code
@@ -50,11 +49,28 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: "21"
-          distribution: temurin
-          server-id: github # Must match <id> in pom.xml
-          settings-path: ${{ github.workspace }} # Creates settings.xml with auth
+          distribution: microsoft
 
       - name: Build and deploy with Maven
-        run: mvn deploy -DskipTests
+        run: mvn clean install
+
+      - name: Delete previous package versions
+        uses: actions/delete-package-versions@v2
+        with:
+          package-name: com.projectV2.backend
+          owner: tvaneynde
+          repo: SE-Backend-V2
+          num-old-versions-to-delete: 1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Publish to GitHub Packages
+        run: mvn deploy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: backend-jar
+          path: target/*.jar
