--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,19 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>courses-backend</name>
   <description>Courses backend in Java with Spring Boot</description>
-
+    <url/>
+    <licenses>
+        <license/>
+    </licenses>
+    <developers>
+        <developer/>
+    </developers>
+    <scm>
+        <connection/>
+        <developerConnection/>
+        <tag/>
+        <url/>
+    </scm>
   <properties>
     <java.version>21</java.version>
   </properties>
@@ -79,11 +91,6 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-deploy-plugin</artifactId>
-        <version>3.1.1</version> <!-- Explicitly define the deploy plugin -->
       </plugin>
     </plugins>
   </build>
