--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,38 +1,9 @@
-# name: CI - Build and Publish to GitHub Packages
-
-# on:
-#   push:
-#     branches:
-#       - main
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v4
-
-#       - name: Set up Java 21
-#         uses: actions/setup-java@v4
-#         with:
-#           distribution: "temurin"
-#           java-version: "21"
-
-#       - name: Build and test with Maven
-#         run: mvn clean verify
-
-#       - name: Publish to GitHub Packages
-#         run: mvn deploy
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-name: Build and Deploy
+name: CI - Build and Publish to GitHub Packages
 
 on:
   push:
     branches:
-      - main # or your release branch
+      - main
 
 jobs:
   build:
@@ -45,32 +16,63 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Java
+      - name: Set up Java 21
         uses: actions/setup-java@v4
         with:
+          distribution: "temurin"
           java-version: "21"
-          distribution: microsoft
 
-      - name: Build and deploy with Maven
-        run: mvn clean install
-
-      - name: Delete previous package versions
-        uses: actions/delete-package-versions@v2
-        with:
-          package-name: com.projectV2.backend
-          owner: tvaneynde
-          repo: SE-Backend-V2
-          num-old-versions-to-delete: 1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and test with Maven
+        run: mvn clean verify
 
       - name: Publish to GitHub Packages
         run: mvn deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+# name: Build and Deploy
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: backend-jar
-          path: target/*.jar
+# on:
+#   push:
+#     branches:
+#       - main # or your release branch
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     permissions:
+#       contents: read
+#       packages: write
+
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+
+#       - name: Set up Java
+#         uses: actions/setup-java@v4
+#         with:
+#           java-version: "21"
+#           distribution: microsoft
+
+#       - name: Build and deploy with Maven
+#         run: mvn clean install
+
+#       - name: Delete previous package versions
+#         uses: actions/delete-package-versions@v2
+#         with:
+#           package-name: com.projectV2.backend
+#           owner: tvaneynde
+#           repo: SE-Backend-V2
+#           num-old-versions-to-delete: 1
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+#       - name: Publish to GitHub Packages
+#         run: mvn deploy
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+#       - name: Upload artifact
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: backend-jar
+#           path: target/*.jar
