--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -38,8 +38,8 @@ jobs:
 
       - name: Download JAR from GitHub Packages
         run: mvn dependency:get -Dartifact=com.projectV2.backend:courses-backend:0.0.1-SNAPSHOT -DremoteRepositories=https://maven.pkg.github.com/tvaneynde/SE-Backend-V2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
