--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,9 +37,10 @@ jobs:
                 </settings>" > ~/.m2/settings.xml
 
       - name: Download JAR from GitHub Packages
-        run: mvn org.apache.maven.plugins:maven-dependency-plugin:3.6.1:get \
-          -Dartifact=com.projectV2.backend:courses-backend:0.0.1-SNAPSHOT \
-          -DremoteRepositories=github::default::https://maven.pkg.github.com/tvaneynde/SE-Backend-V2
+        run: |
+          mvn org.apache.maven.plugins:maven-dependency-plugin:3.6.1:get \
+            -Dartifact=com.projectV2.backend:courses-backend:0.0.1-SNAPSHOT \
+            -DremoteRepositories=github::default::https://maven.pkg.github.com/tvaneynde/SE-Backend-V2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
