--- a/application-prod.yaml
+++ b/application-prod.yaml
@@ -1,6 +1,10 @@
 spring:
   profiles:
     active: prod
+  datasource:
+    url: jdbc:h2:mem:courses
+    username: courses
+    password: courses123
 cors:
   allowed-origins:
     - "https://projectv2-frontend-gqfvcxacgnhxazf5.westeurope-01.azurewebsites.net"
