--- a/application-dev.yaml
+++ b/application-dev.yaml
@@ -1,9 +1,13 @@
 spring:
-  profiles:
-    active: dev
   datasource:
     url: jdbc:h2:mem:courses
     username: courses
     password: courses123
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
+
 jwt:
   secret-key: d2ViNC1ub3Qtc28tc2VjcmV0LWFjY2Vzcy1zZWNyZXQ=
