--- a/application-prod.yaml
+++ b/application-prod.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://projectv2-postgres.postgres.database.azure.com:5432/courses?currentSchema=prod_schema
+    url: jdbc:postgresql://projectv2-postgres.postgres.database.azure.com:5432/courses?currentSchema=public
     username: tomasvaneynde@<projectv2-postgres.postgres.database.azure.com
     password: Panda3212
     driver-class-name: org.postgresql.Driver
