--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,15 +1,16 @@
 spring:
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+  datasource:
+    url: jdbc:h2:mem:courses
+    username: courses
+    password: courses123
   jpa:
+    hibernate:
+      ddl-auto: create-drop
     show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-server:
-  port: 3000
-cors:
-  allowed-origins:
-    - http://localhost:8080
+    database-platform: org.hibernate.dialect.H2Dialect
+
+jwt:
+  secret-key: d2ViNC1ub3Qtc28tc2VjcmV0LWFjY2Vzcy1zZWNyZXQ=
