changed deploy profile

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish to GitHub Packages
-        run: mvn deploy
+        run: mvn deploy -Dspring.profiles.active=dev
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
