--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,19 +1,22 @@
 spring:
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
   flyway:
     enabled: true
+    baseline-on-migrate: true
     locations: classpath:db/migration
-  datasource:
-    url: jdbc:h2:mem:courses
-    username: courses
-    password: courses123
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
-    show-sql: true
-    database-platform: org.hibernate.dialect.H2Dialect
 
-jwt:
-  secret-key: d2ViNC1ub3Qtc28tc2VjcmV0LWFjY2Vzcy1zZWNyZXQ=
+server:
+  port: 3000
+
 cors:
   allowed-origins:
-    - "http://localhost:3000"
+    - http://localhost:3000
+    - http://localhost:8080
