--- a/src/main/resources/application-production.yaml
+++ b/src/main/resources/application-production.yaml
@@ -9,7 +9,7 @@ spring:
     password: ${SPRING_DATASOURCE_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     show-sql: false
   flyway:
     enabled: true
