--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -3,7 +3,7 @@ spring:
     activate:
       on-profile: prod
   datasource:
-    url: jdbc:postgresql://projectv2-postgres.postgres.database.azure.com:5432/postgres?currentSchema=courses&ssl=require
+    url: jdbc:postgresql://projectv2-db.postgres.database.azure.com:5432/postgres?currentSchema=courses&ssl=require
     driver-class-name: org.postgresql.Driver
     username: tomasvaneynde
     password: Panda3212
